# deep-research

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run_cli.py  run_worker.py
prompts/: __init__.py  clarifying.py  planner.py  search.py  triage.py  writer.py
research_agents/: __init__.py  clarifying_agent.py  planner_agent.py  search_agent.py  triage_agent.py  writer_agent.py
utils/: __init__.py  logger.py  models.py  types.py
workflows/: research_manager.py  research_workflow.py
