[project]
name = "deep-research"
version = "0.1.0"
description = "Deep Research Agent with Temporal for Durability"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-agents>=0.14.4",
    "pydantic>=2.12.2,<3",
    "python-dotenv>=1.2.2",
    "temporalio[openai-agents,opentelemetry]>=1.26.0",
    "rich>=15.0.0",
    "prompt-toolkit>=3.0.0",
]
